Blackpurl/src/objects/HDnet_Australia_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used for HDnet Australia vendor order export file.</description>
    <fields>
        <fullName>Dealer_Mailbox_Id__c</fullName>
        <description>H-DENET mailbox id</description>
        <inlineHelpText>H-DENET mailbox id</inlineHelpText>
        <label>Dealer Mailbox Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Vendor order type with possible values SO/UU/SU/SM.</description>
        <inlineHelpText>Vendor order type with possible values SO/UU/SU/SM.</inlineHelpText>
        <label>Order Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <description>Ship to Address</description>
        <inlineHelpText>Ship to Address</inlineHelpText>
        <label>Ship To</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>HDnet Australia Config</label>
</CustomObject>